# swc-plugin-react-native-reanimated

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
spec/: fixture.debug.ts  fixture.spec.ts
spec/__snapshots__/: fixture.spec.ts.snap
spec/swc-reanimated-custom-transform/: Cargo.toml
spec/swc-reanimated-custom-transform/src/: lib.rs
