[package]
name = "swc-reanimated-custom-transform"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
napi-build = "2.0.0"

[dependencies]
napi = { version = "2.4.1", default-features = false, features = [
  "napi3",
  "serde-json",
] }
napi-derive = { version = "2.4.0", default-features = false, features = [
  "type-def",
] }
swc = { git = "https://github.com/kwonoj/swc", rev = "a7381651eaec89c44b63575b16d5a42d83e02e96", features = ["node"] }
backtrace = "0.3.65"
anyhow = "1.0.57"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["unbounded_depth"] }
swc_common = { git = "https://github.com/kwonoj/swc", rev = "a7381651eaec89c44b63575b16d5a42d83e02e96", features = ["concurrent", "sourcemap"] }
swc_ecmascript = { git = "https://github.com/kwonoj/swc", rev = "a7381651eaec89c44b63575b16d5a42d83e02e96", features = ["codegen", "optimization", "parser", "react", "transforms", "typescript", "utils", "visit"] }
swc_node_base = { git = "https://github.com/kwonoj/swc", rev = "a7381651eaec89c44b63575b16d5a42d83e02e96" }
swc_ecma_ast = {git = "https://github.com/kwonoj/swc", rev = "a7381651eaec89c44b63575b16d5a42d83e02e96"}
swc-reanimated-worklets-visitor = { version = "0.0.1", path = "../../packages/swc-reanimated-worklets-visitor" }
